crates/python-connector/src/snapshots/python_connector__config_types__test__configurations_are_classes.snap
---
source: crates/python-connector/src/config_types.rs
expression: "[render(spec, Resources::Capture),\nrender(non_object, Resources::Capture),].join(\"\\n=====\\n\")"
---
# Generated for the endpoint configuration of `spec.configSchema`.
class EndpointConfig(_pydantic.BaseModel):
    model_config = _pydantic.ConfigDict(extra='allow')

    a: _typing.Optional[str] = None



# Generated for the resource configuration of `spec.resourceConfigSchema`.
class ResourceConfig(common.BaseResourceConfig):
    model_config = _pydantic.ConfigDict(extra='allow')

    name: str

    PATH_POINTERS: _typing.ClassVar[list[str]] = ["/name"]

    def path(self) -> list[str]:
        """Resource path of this binding: its `x-schema-name` (if any),
        followed by its `x-collection-name`."""
        return [self.name]




# uses_common: true, has_path: true

=====
# Generated for the endpoint configuration of `spec.configSchema`.
class EndpointConfig(_pydantic.BaseModel):
    model_config = _pydantic.ConfigDict(extra='allow')




# Generated for the resource configuration of `spec.resourceConfigSchema`.
ResourceConfig: _typing.TypeAlias = str



# uses_common: false, has_path: false
