crates/python-connector/src/snapshots/python_connector__config_types__test__invalid_schemas_are_errors.snap
---
source: crates/python-connector/src/config_types.rs
expression: "format!(\"{err:#}\")"
---
invalid `configSchema`: invalid JSON schema: at schema://bundle#/type: invalid type name: 'not-a-type'
